--- a/Assets/Sports-info/sports.css
+++ b/Assets/Sports-info/sports.css
@@ -3,17 +3,13 @@
     padding: 0;
     margin: 0;
     font-family: "Helvetica Neue", "Segoe UI", Helvetica, Arial, sans-serif;
+   
 }
 .navbar {
     font-weight: bold;
 }
-/* body {
-    background-color: black;
-} */
-jumbotron {
-    background-image: url("");
 
-}
+
 /* jumbotron container {
     margin-top: 0px;
     position: relative;
@@ -21,7 +17,11 @@ jumbotron {
 } */
 #center{
     margin-top:10px;
+    background-color: #000000;
     }
+h2,h4,h6,p {
+    color: whitesmoke;
+}
 .center_blog_right_last_2 p{
 font-size:16px;
 line-height:1.6em;
