--- a/Assets/Weather-info/weather.css
+++ b/Assets/Weather-info/weather.css
@@ -7,7 +7,7 @@
 }
 body {
   box-sizing: border-box;
-  font-family: "Helvetica Neue", "Segoe UI", Helvetica, Arial, sans-serif;
+  font-family: "Times New Roman", Times, serif;
   font-size: 90%;
 }
 
