--- a/main.css
+++ b/main.css
@@ -1,12 +1,26 @@
 * {
-  font-family: "Helvetica Neue", "Segoe UI", Helvetica, Arial, sans-serif;
+  font-family: "Times New Roman", Times, serif;
+}
+body {
+  background-image: url("https://www.lefthudson.com/wp-content/uploads/2019/11/old-newspaper-background-inspirational-old-newspaper-4k-stock-footage-free-background-inspiration-of-old-newspaper-background.jpg");
 }
 .navbar {
   font-weight: bold;
 }
+
 .jumbotron {
-  margin: 10%;
+  margin: 5%;
 }
 li {
-    list-style: none;
+  list-style: none;
+}
+h3 {
+  margin-left: 45%;
+  margin-top: 0;
+}
+footer {
+  margin-top: 28%;
+}
+hr {
+  margin: 10%;
 }
