--- a/Assets/Sports-info/sports.css
+++ b/Assets/Sports-info/sports.css
@@ -15,9 +15,9 @@
  }
 #center{
     margin-top:10px;
-    background-color: #000000;
+    /* background-color: #000000; */
     }
-h2,h4,h6,p {
+h1,h4,h6,p {
     color: whitesmoke;
 }
 .center_blog_right_last_2 p{
